--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                     <h4 class="mbr-section-subtitle mbr-fonts-style align-left pb-2 display-5"><font color="#efefef"><strong>Интернет-магазин DINITROL</strong></font></h4>
                     <h1 class="mbr-section-title mbr-white mbr-fonts-style align-left display-1"><font color="#efefef"><strong>DINITROL - шумоизоляция и антикоррозионные материалы для автомобиля</strong></font></h1>
                     <p class="mbr-text pb-3 mbr-fonts-style mbr-white align-left display-7"></p>
-                    <div class="mbr-section-btn align-center"><a class="btn btn-lg btn-info-outline display-4" href="order.html#form3-1l">Заказать сейчас</a></div>
+                    <div class="mbr-section-btn align-center"><a class="btn btn-lg btn-secondary-outline display-4" href="order.html#form3-1l">Заказать сейчас</a></div>
                 </div>
             <!-- </div> -->
             </div>
@@ -149,7 +149,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     </div>
 </section>
 
-<div class="wrap cid-qXh36OzCXt" style="justify-content: center; display: flex; flex-wrap:wrap; margin: 100px auto 100px auto;" id="header2-w" data-rv-view="6966">
+<div class="wrap cid-qXh36OzCXt" style="justify-content: center; display: flex; flex-wrap:wrap; margin: 100px auto 100px auto;" id="header2-w" data-rv-view="7129">
 <div class="tile"><a href="fenders.html#features19-t" class="text-white"> 
   <img src="assets/images/9f049u-960-960x639.jpg" alt="" title="" media-simple="true">
   <div class="text">
