create github pages

--- a/index.html
+++ b/index.html
@@ -9,14 +9,15 @@
   <link rel="shortcut icon" href="assets/images/812shpet1ml.-sl1476-.jpg" type="image/x-icon">
   <meta name="description" content="Simple Template for Headphone eCommerce Website. Download Now!">
   <title>DINITROL</title>
+  <link rel="stylesheet" href="assets/icons-mind/style.css">
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="stylesheet" href="assets/soundcloud-plugin/style.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-reboot.min.css">
-  <link rel="stylesheet" href="assets/dropdown/css/style.css">
-  <link rel="stylesheet" href="assets/socicon/css/styles.css">
   <link rel="stylesheet" href="assets/animatecss/animate.min.css">
+  <link rel="stylesheet" href="assets/socicon/css/styles.css">
+  <link rel="stylesheet" href="assets/dropdown/css/style.css">
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
   
@@ -149,7 +150,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     </div>
 </section>
 
-<div class="wrap cid-qXh36OzCXt" style="justify-content: center; display: flex; flex-wrap:wrap; margin: 100px auto 100px auto;" id="header2-w" data-rv-view="7129">
+<div class="wrap cid-qXh36OzCXt" style="justify-content: center; display: flex; flex-wrap:wrap; margin: 100px auto 100px auto;" id="header2-w" data-rv-view="7645">
 <div class="tile"><a href="fenders.html#features19-t" class="text-white"> 
   <img src="assets/images/9f049u-960-960x639.jpg" alt="" title="" media-simple="true">
   <div class="text">
@@ -204,10 +205,10 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
             <div class="media-container-column title col-12 col-lg-7 col-md-6">
                 <h3 class="mbr-section-subtitle align-left mbr-light pb-3 mbr-fonts-style display-5">
                    ДЕЛАЙТЕ ЗАКАЗ ПРЯМО СЕЙЧАС!!!!</h3>
-                <h2 class="align-left mbr-bold mbr-fonts-style mbr-white mbr-section-title display-2">Остались вопросы звоните<br> тел. <br></h2>
+                <h2 class="align-left mbr-bold mbr-fonts-style mbr-white mbr-section-title display-2">Остались вопросы на пишите нам<br></h2>
             </div>
             <div class="media-container-column col-12 col-lg-3 col-md-4">
-                <div class="mbr-section-btn align-right py-4"><a class="btn btn-secondary-outline display-4" href="order.html#form3-1l">Заказать</a></div>
+                <div class="mbr-section-btn align-right py-4"><a class="btn btn-secondary-outline display-4" href="question.html#form3-2u"><span class="imind-mail-settings mbr-iconfont mbr-iconfont-btn"></span>задать вопрос</a></div>
             </div>
         </div>
     </div>
@@ -312,11 +313,11 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   <script src="assets/web/assets/jquery/jquery.min.js"></script>
   <script src="assets/popper/popper.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
-  <script src="assets/dropdown/js/script.min.js"></script>
+  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>
   <script src="assets/smoothscroll/smooth-scroll.js"></script>
   <script src="assets/viewportchecker/jquery.viewportchecker.js"></script>
   <script src="assets/parallax/jarallax.min.js"></script>
-  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>
+  <script src="assets/dropdown/js/script.min.js"></script>
   <script src="assets/theme/js/script.js"></script>
   
   
