create github pages

--- a/tab479-5.html
+++ b/tab479-5.html
@@ -104,8 +104,8 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <br>3559 руб.  (100% предоплата.)<br><br>Производитель:
 DINOL GmbH (Германия).<br></p><p><strong>Нет наскладе подзаказ</strong></p>
                     </div>
-                    <div class="mbr-section-btn pt-3 align-left">                                <a class="btn btn-md btn-warning display-4" href="order.html#form3-1l">Заказать</a>
-                     <!-- <a class="btn btn-md btn-warning" onclick="test(1)" data-app-placeholder="Введите Текст">Заказать</a>-->
+                    <div class="mbr-section-btn pt-3 align-left">                               <!--<a class="btn btn-md btn-warning" href="order.html#form3-1l" data-app-placeholder="Введите Тек ст">Заказать</a>-->
+                     <a class="btn btn-md btn-warning display-4" onclick="Order('Dinitrol 479 (5 литров, бидон)')">Заказать</a>
                     </div>
                 </div>
             </div>
