create github pages

--- a/ML.html
+++ b/ML.html
@@ -105,7 +105,10 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <br>Производитель:
 <br>	DINOL GmbH (Германия).<br></p><p><strong>Нет наскладе подзаказ</strong></p>
                     </div>
-                    <div class="mbr-section-btn pt-3 align-left"><a class="btn btn-md btn-warning display-4" href="order.html#form3-1l">Заказать</a></div>
+                    <div class="mbr-section-btn pt-3 align-left">
+                        <!--<a class="btn btn-md btn-warning" href="order.html#form3-1l" data-app-placeholder="Введите Текст">Заказать</a>-->
+                        <a class="btn btn-md btn-warning display-4" onclick="Order('Dinitrol ML (500 ml, аэрозоль)')">Заказать</a>
+                    </div>
                 </div>
             </div>
         </div>
