--- a/tab4010-05.html
+++ b/tab4010-05.html
@@ -105,7 +105,10 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <br>
 <br>Производитель: DINOL GmbH (Германия).<br></p><p><strong>Нет наскладе подзаказ</strong></p>
                     </div>
-                    <div class="mbr-section-btn pt-3 align-left"><a class="btn btn-md btn-warning display-4" href="order.html#form3-1l">Заказать</a></div>
+                    <div class="mbr-section-btn pt-3 align-left">
+                        <!--<a class="btn btn-md btn-warning" href="order.html#form3-1l" data-app-placeholder="Введите Текст">Заказать</a>-->
+                         <a class="btn btn-md btn-warning display-4" onclick="Order('DINITROL 4010 (0,5л аэрозоль)')">Заказать</a>                   
+                    </div>
                 </div>
             </div>
         </div>
@@ -267,7 +270,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   <script src="assets/dropdown/js/script.min.js"></script>
   <script src="assets/theme/js/script.js"></script>
   
-  
+  <script src="assets/order/order.js"></script>
  <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i></i></a></div>
     <input name="animation" type="hidden">
   </body>
