--- a/rc800-60.html
+++ b/rc800-60.html
@@ -103,7 +103,10 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <br>400 руб.  (100% предоплата.)<br><br>Производитель:
 <br>	DINOL GmbH (Германия).<br></p><p><strong>Нет наскладе подзаказ</strong></p>
                     </div>
-                    <div class="mbr-section-btn pt-3 align-left"><a class="btn btn-md btn-warning display-4" href="order.html#form3-1l">Заказать</a></div>
+                    <div class="mbr-section-btn pt-3 align-left">
+                        <!--<a class="btn btn-md btn-warning" href="order.html#form3-1l" data-app-placeholder="Введите Текст">Заказать</a>-->
+                        <a class="btn btn-md btn-warning display-4" onclick="Order('Dinitrol RC800 (60 мл.)')">Заказать</a>
+                    </div>
                 </div>
             </div>
         </div>
