--- a/tab1000-1l.html
+++ b/tab1000-1l.html
@@ -104,7 +104,10 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <br>
 <br>Производитель: DINOL GmbH (Германия).<br></p><p><strong>Нет наскладе подзаказ</strong></p>
                     </div>
-                    <div class="mbr-section-btn pt-3 align-left"><a class="btn btn-md btn-warning display-4" href="order.html#form3-1l">Заказать</a></div>
+                    <div class="mbr-section-btn pt-3 align-left">
+                        <!--<a class="btn btn-md btn-warning" href="order.html#form3-1l" data-app-placeholder="Введите Текст">Заказать</a>-->
+                        <a class="btn btn-md btn-warning display-4" onclick="Order('Dinitrol 1000 (1 L, аэрозоль)')">Заказать</a>
+                    </div>
                 </div>
             </div>
         </div>
