create github pages

--- a/rc800-60.html
+++ b/rc800-60.html
@@ -100,7 +100,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                     <h2 class="mbr-title pt-2 mbr-fonts-style align-left display-2">Dinitrol RC800 (60 мл.)</h2>
                     <div class="mbr-section-text">
                         <p class="mbr-text pt-3 mbr-light mbr-fonts-style align-left display-7"><br>Артикул:&nbsp;<br>Преобразователь ржавчины, на водной основе.<br><br>Розничная цена: 
-<br>400 руб.  (100% предоплата.)<br><br>Производитель:
+<br>Цену необходимо уточнить<br><br>Производитель:
 <br>	DINOL GmbH (Германия).<br></p><p><strong>Нет наскладе подзаказ</strong></p>
                     </div>
                     <div class="mbr-section-btn pt-3 align-left">
